Fixing up images not showing up on the live server link

--- a/styles2.css
+++ b/styles2.css
@@ -6,7 +6,7 @@
   justify-content: center;
   align-items: center;
   height: 100vh;
-  background: url('https://images.contentstack.io/v3/assets/bltb6530b271fddd0b1/blt71a6b1b580c12bfe/64f221c33dff1b122aef8804/Homepage_Cinematic_BG.jpg') no-repeat center center/cover;
+  background: url('assets homepage/background.jpg') no-repeat center center/cover;
   color: white;
   text-align: center;
   overflow: hidden;
